--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ pagination:
   data: collections.chapters
   size: 10
   alias: items
-layout: base.njk
+layout: src/_includes/base.njk
 title: "Capítulos"
 ---
 <ul>
