--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -10,6 +10,7 @@
   </head>
   <body>
     <header>
+<link rel="stylesheet" href="/assets/site.css">
       <h1><a href="/">Site de Novels</a></h1>
       <nav>
         <a href="/">Início</a> |
